--- a/RAG with behishti.ipynb
+++ b/RAG with behishti.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "b46e42b7-ab80-4b5d-96ed-f3d066492bf7",
    "metadata": {},
    "outputs": [],
@@ -77,28 +77,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "108bb8ce-610e-4aeb-9575-2975efcf20fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'source': 'E:\\\\D\\\\Faiza\\\\PhD\\\\Thesis\\\\Implementation\\\\RAG based QAS\\\\RAG-based-QAS\\\\bahishti_1_2_3.pdf', 'page': 0, 'ayah': '2:2'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for doc in docs:\n",
+    "    new_dict = doc.metadata\n",
+    "    new_dict['ayah'] = '2:2'\n",
+    "    doc.metadata = new_dict\n",
+    "    print(doc.metadata)\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "77530df0-ce6c-4b73-a31b-7efc94b01269",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "186"
+       "Document(page_content=' \\nBahishti Zewar  \\nMoulana Ashraf Ali Thanwi (Rahmatullah Alaihi)  \\nTRUE STORIES  \\nFirst Story  \\nRasulullah sallAllâhu alayhi wa sallam is reported to have said: \"A person was in a jungle when all of \\na sudden he heard a voice in a cl oud saying: \"Go and water the orch ard of so and so person.\" On \\nhearing that voice, the cloud moved and poured heavily on a stony place. All the water collected in a \\ndrain and began to flow. This person began following the water and saw that a man was standing in his \\norchard and was sprinkling water with a spade. This  person asked the gardener : \"O servant of Allâh! \\nWhat is your name?\" He gave the same name which this person had heard in the cloud. Thereafter, the \\ngardener asked this person: \"O servant of Allâh!  Why are you asking me my name?\" He replied: \"I \\nheard a voice in that cloud whos e water this is taking your name and asking it to pour water onto your \\norchard. What do you do in it that it is so acceptable? \" He replied: \"Now that you have asked, I will \\nhave to inform you. I look at its total produce and from there I give one third to charity. Another third I \\nkeep for myself and my family, and the la st third I re-invest into this orchard.\" \\nLesson : Glory be to Allâh! How merciful He is that  the person who obeys Him has all his work \\ndone through unseen ways without him even know ing about it. Without doubt, the person who \\nbecomes Allâh\\'s, Allâh becomes his.  \\n  \\nSecond Story  \\nOnce Rasulullah sallAllâhu alayhi wa sallam related that there were three men from the Banu Isra\\'eel . \\nOne of them was a leper, the other bald, and the third blind. Allâh Ta\\'â la wanted to test them, so He \\nsent an angel to them. The angel first went to the leper and asked him: \"What would you like best?\" \\nHe replied: \"I would like a nice complexion, a beautiful skin, and that  this sickness goes away from \\nme whereby people do not allow me to sit with them and which they  hate.\" The angel passed his hand \\nover the body of that person. He was immediately cured and a nice skin an d beautiful complexion \\nappeared. The angel then asked him: \"What type  of wealth do you like the most?\" He replied: \\n\"Camels.\" So he gave him a pregnant camel and told him: \"May Allâh Ta\\'âla give you barakah  in \\nthis.\" \\nThe angel then went to the bald person and asked hi m: \"What would you like be st?\" He replied: \"That \\nmy hair grows nicely and that this sickness whic h people dislike goes away from me!\" The angel \\npassed his hand over his head, he was immediately cu red and beautiful hair began to grow. He then \\nasked him: \"What type of wealth do you like the mo st?\" He replied: \"Cows.\" So he gave him a \\npregnant cow and told him: \"May Allâh Ta\\'âla give you barakah in this.\"  \\nEventually, the angel went to the blind person and asked him: \"What would you like most?\" He \\nreplied: \"That Allâh gives me back  my sight so that I may be able  to see everyone.\" The angel passed \\nhis hand over his eyes and Allâh gave him back his si ght. He then asked him: \"What type of wealth do \\nyou like the most?\" He replied: \"Goats.\" So he was given a pregnant goat. The animals of all three \\n2\\xa0\\n\\xa0', metadata={'source': 'E:\\\\D\\\\Faiza\\\\PhD\\\\Thesis\\\\Implementation\\\\RAG based QAS\\\\RAG-based-QAS\\\\bahishti_1_2_3.pdf', 'page': 1})"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "len(docs)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "328c5ee7-4d37-47cf-abb1-cd5b9d7c14a1",
    "metadata": {},
    "outputs": [
@@ -106,7 +127,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "page_content='Bahishti Zewar (translated as Heavenly Ornaments ), was written by Maulana Ashraf Ali Thanvi \\nRahmatullahe Alaihe. is a 8 volume comprehensive handbook of fiqh (jurisprudence), especially \\nfor the education of girls and women. This volume has been compiled by the Islamic Bulletin \\nwww.islamicbulletin.com  into two separate books. Volu me 1,2, 3 and the second volume 4,5,6, \\n7. It describes the Five Pillars of Islam and also  highlights more obscure principles. For years it \\nhas remained a favorite with the people of the Indo-Pakistan subc ontinent. Among (Hanafi \\nDeobandi) Muslims, it is a popular practice to present this volume to a new bride. The \\nmotivation behind this gesture is  that the young woman is taking up a new identity and new life \\nas a wife and mother-to-be. She should be well versed  in the rites, rituals and tradition of Islam.' metadata={'source': 'E:\\\\D\\\\Faiza\\\\PhD\\\\Thesis\\\\Implementation\\\\RAG based QAS\\\\RAG-based-QAS\\\\bahishti_1_2_3.pdf', 'page': 0}\n"
+      "page_content='Bahishti Zewar (translated as Heavenly Ornaments ), was written by Maulana Ashraf Ali Thanvi \\nRahmatullahe Alaihe. is a 8 volume comprehensive handbook of fiqh (jurisprudence), especially \\nfor the education of girls and women. This volume has been compiled by the Islamic Bulletin \\nwww.islamicbulletin.com  into two separate books. Volu me 1,2, 3 and the second volume 4,5,6, \\n7. It describes the Five Pillars of Islam and also  highlights more obscure principles. For years it \\nhas remained a favorite with the people of the Indo-Pakistan subc ontinent. Among (Hanafi \\nDeobandi) Muslims, it is a popular practice to present this volume to a new bride. The \\nmotivation behind this gesture is  that the young woman is taking up a new identity and new life \\nas a wife and mother-to-be. She should be well versed  in the rites, rituals and tradition of Islam.' metadata={'source': 'E:\\\\D\\\\Faiza\\\\PhD\\\\Thesis\\\\Implementation\\\\RAG based QAS\\\\RAG-based-QAS\\\\bahishti_1_2_3.pdf', 'page': 0, 'ayah': '2:2'}\n"
      ]
     }
    ],
@@ -118,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "4b6cc9f1-bc51-46ae-835a-e33f6c27c735",
    "metadata": {},
    "outputs": [
@@ -163,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "234e0963-c7be-41db-b09b-7024f59ddb0b",
    "metadata": {},
    "outputs": [
@@ -192,10 +213,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "5d11375d-9b2b-4188-b520-5eae6f4806c6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'behishti_db' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m persist_directory \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mE:\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mD\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mFaiza\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mPhD\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mThesis\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mImplementation\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mRAG based QAS\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mRAG-based-QAS/behishti_db\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mbehishti_db\u001b[49m\u001b[38;5;241m.\u001b[39msave_local(persist_directory)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'behishti_db' is not defined"
+     ]
+    }
+   ],
    "source": [
     "persist_directory = 'E:\\D\\Faiza\\PhD\\Thesis\\Implementation\\RAG based QAS\\RAG-based-QAS/behishti_db'\n",
     "behishti_db.save_local(persist_directory)"
@@ -203,7 +236,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
+   "id": "e46926e6-4934-4003-a74d-458df1f9863c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "behishti_db = FAISS.load_local('E:\\D\\Faiza\\PhD\\Thesis\\Implementation\\RAG based QAS\\RAG-based-QAS/behishti_db', embeddings, allow_dangerous_deserialization=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "b7a3b226-5e10-4641-abda-635f963baee2",
    "metadata": {},
    "outputs": [
@@ -225,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "3b0dd650-b832-4fa4-87fe-86e86f05349e",
    "metadata": {},
    "outputs": [],
@@ -249,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "88ab95a4-bec5-455b-9d1a-25aabe68477c",
    "metadata": {},
    "outputs": [],
@@ -260,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "0d4985ab-86e0-4216-8e89-9264aa5cd3ae",
    "metadata": {},
    "outputs": [],
@@ -271,9 +314,80 @@
     "    memory=memory,\n",
     "    return_generated_question=False,\n",
     "    rephrase_question=True,\n",
-    "    return_source_documents=False,\n",
+    "    return_source_documents=True,\n",
     "    combine_docs_chain_kwargs={\"prompt\": prompt}\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "28dcd478-5e37-4bc0-8a13-36c533541369",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " what are the orders for prayer?\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\dell\\.conda\\envs\\Umrah\\lib\\site-packages\\langchain_core\\_api\\deprecation.py:119: LangChainDeprecationWarning: The method `Chain.__call__` was deprecated in langchain 0.1.0 and will be removed in 0.2.0. Use invoke instead.\n",
+      "  warn_deprecated(\n"
+     ]
+    }
+   ],
+   "source": [
+    "result= chain(input())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "1c4d6cc4-c375-4245-9247-7007e9ca9d09",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['question', 'chat_history', 'answer', 'source_documents'])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a7590a40-fed1-4a40-8c0c-ccec7ada1de9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Document(page_content=\"87\\xa0\\n\\xa0repeat that adhaan. Similarly, if a person calls out iqaamah while in a state of major or minor \\nimpurity, this will be makruh-e-tahrimi  but it is not mustahab  to repeat the iqaamah. \\n9. It is sunnah to sa y the words of the adhaan and iqaamah in the sequence shown to us. If a person \\nsays a latter word first, for example, he says Ash hado anna Muhammadar Rasulullah  before Ash \\nhado an la ilaaha illa Allahu , or he says Hayya alal falaah before Hayya alas salaat ; then in such a \\ncase, just the latter word should be rep eated. In the first example, after saying Ash hado an la ilaaha \\nilla Allahu he should repeat Ash hado anna Muhammadan Rasulullah . In the second example, after \\nsaying Hayya alas salaat , he should repeat Hayya alal falaah. It is not necessary to repeat the entire \\nadhaan. \\n10. While calling out the adhaan and iqaamah, no other words should be spoken, even if they be a \\ngreeting or a reply to a greeting. If a person speaks while calling out adhaan or iqaamah and he spoke \\nconsiderably, he should repeat the adhaan and not the iqaamah. \\nTHE PREREQUISITES OF SALAAT  \\nBefore commencing with salaat, several things are wajib . If one does not have wudu, then wudu should \\nbe made. If there is a need to have a bath, then a bath should be taken. If there is any impurity on the \\nbody or clothes, it should be purified. The place where salaat is being offered should also be pure. Apart from the face, hands and feet, the entire bo dy from head to toe should be well covered. One \\nshould face the qiblah. An intention should be made for the salaat which one wishes to offer. The \\nsalaat should be offered after  the entry of that salaat  time. All these are prere quisites or conditions for \\nsalaat. If any one of these prerequisite s are not found, salaat will not be valid. \\n2. It is not permissible to offer salaat with a very thin, flimsy or lacy scarf. \\n3. If a quarter of a woman's calf, thigh or arm ge ts exposed while offering salaat and it remains\", metadata={'source': 'E:\\\\D\\\\Faiza\\\\PhD\\\\Thesis\\\\Implementation\\\\RAG based QAS\\\\RAG-based-QAS\\\\bahishti_1_2_3.pdf', 'page': 86}),\n",
+       " Document(page_content=\"11\\xa0\\n\\xa04. To think ill of or find fault w ith any order of Allâh and His Ra sul sallallahu alayhi wa sallam. \\n5. To scorn at any prophet or angel,  or to find fault with them. \\n6. To have the belief that a particular saint or pious person has full knowledge of all our \\nconditions at all times. \\n7. To ask about unknown matters or to cause events to be foretold from an astrologer or person \\nunder the influence of a jinn, and then to believe in what they say. \\n8. To take omens from the speech of a pious person and then to regard them as true. \\n9. To implore someone from a great distance and to think that he must have definitely come to \\nknow of it. \\n10. To regard someone as having the choice of benefitting or causing harm. \\n11. To ask someone for the fulfilment of one 's needs, sustenance and children. \\n12. To fast in someone's name.  \\n13. To prostrate to someone. \\n14. To release an animal in someone's name or to make an offering in someone's name. \\n15. To make a pledge in the name of someone. \\n16. To make tawaaf  around the grave or house of someone. \\n17. To give priority to other things or customs over the orders of Allâh Ta'âla. \\n18. To bow in front of someone or to stand motionless like a statue in front of him. \\n19. To make an offering of a goat to a jinn, etc. \\n20. To sacrifice an animal in the name of someone. \\n21. To make an offering or sacrifice a goat, etc. in order to rid one's self of a jinn, ghost, or evil \\nspirit. \\n22. To worship the navel-cord of the child so that it may live. \\n23. To cry out to someone (other than Allâh) for justice. \\n24. To respect and revere any place as one would do for the Ka'bah. \\n25. To pierce the ears or nose of a child and to make  him wear an ear or nose-ring in the name of \\nsomeone. \\n26. To tie a coin on the arm, or a string ar ound the neck in the name of someone. \\n27. To make children wear garlands, wreaths, to keep  locks of hair over thei r heads, or to make \\nthem beggars.\", metadata={'source': 'E:\\\\D\\\\Faiza\\\\PhD\\\\Thesis\\\\Implementation\\\\RAG based QAS\\\\RAG-based-QAS\\\\bahishti_1_2_3.pdf', 'page': 10}),\n",
+       " Document(page_content='zuhr, maghrib  and esha. The person should make a brief dua and occupy himself with the sunnah \\nsalaats. One could lengthen the duas  for as long as one wishes for those salaats that are not followed \\nby sunnah salaats, such as the fajr and asr salaats. If the person is the imam , he should turn towards \\nhis right or left, facing the muqtadis. Thereafter, he should make the dua on condition that there is no \\nmasbuq facing him. \\n8. It is preferable to read the following after the fard salaat :', metadata={'source': 'E:\\\\D\\\\Faiza\\\\PhD\\\\Thesis\\\\Implementation\\\\RAG based QAS\\\\RAG-based-QAS\\\\bahishti_1_2_3.pdf', 'page': 96}),\n",
+       " Document(page_content=\"83\\xa0\\n\\xa0In the fajr adhaan, after saying Hayya alal falaah , he should add the words as-Salaatu khayrum minan \\nnaum  two times.  \\nThe total phrases of adhaan are therefore fifteen while there are seventeen words for the adhaan of \\nfajr. \\nThe words of the adhaan should not be uttered in a singing tune, nor should th ey be uttered in such a \\nway that some of the word s are said loudly while others are said softly.  \\nAfter saying Allahu Akbar twice, he should wait to the extent th at the person who is listening to the \\nadhaan can reply to it. Apart from Allahu Akbar , even for the other words, he should wait for a similar \\nperiod before continuing with the next words. \\n6. The method of iqaamah is also the same. The difference is that it is preferable to call out the adhaan \\noutside the musjid, while the iqaamah is called out inside. Adhaan is called out in a loud voice while \\niqaamah is called out in a comparatively softer voice. In iqaamah  one does not say as-salaatu khairun \\nminan naum . Instead, for all the five salaats one has to say Qad qaamatis salaat  two times. When \\nsaying the iqaamah one does not have to insert one's fore-fingers into one's ears. The reason for \\ninserting the fingers into the ears is to raise th e voice, and this is not necessary when saying the \\niqaamah. In the iqaamah , it is not necessary to turn right and left when saying Hayya alas salaat  and \\nHayya alal falaah. However, some jurists are in favour of this. \\n                                                                                                                                 \\nRules Concerning Adhaan and Iqaamah \\n1. For every fard-e-ayn salaat , it is sunnat-e-mu'akkadah  for men to call out adhaan once. This is \\nirrespective of whether a person is a traveller or not, whether he is re ading in congregation or alone, or \\nwhether he is reading a qada salaat  or not. For jumu'ah salaat , the adhaan  should be called out twice.\", metadata={'source': 'E:\\\\D\\\\Faiza\\\\PhD\\\\Thesis\\\\Implementation\\\\RAG based QAS\\\\RAG-based-QAS\\\\bahishti_1_2_3.pdf', 'page': 82})]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result['source_documents']"
    ]
   },
   {
